--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -8,12 +8,12 @@ jobs:
         steps:
             - name: checkout repo
               uses: actions/checkout@v4
-              
-            - name: Welcome message
-              run: echo "My first Github actions Job"
 
-            - name: List files
-              run: ls
-
-            - name: Read file
-              run: cat README.md
+            - name: List and Read file
+              run: |
+                echo "My first Github actions Job"
+                ls -ltra
+                cat README.md
+            
+            - name: Generate ASCII Artwork
+              run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
