--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -10,17 +10,23 @@ jobs:
         - name: Checkout Repo
           uses: actions/checkout@v4
         
-        - name: Install Cowsay Program
-          run: sudo apt-get install cowsay -y
-        
-        - name: Execute Cowsay CMD
-          run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
-
-        - name: Test file Exists
-          run: grep -i "dragon" dragon.txt
-
-        - name: Read File
-          run: cat dragon.txt
-
-        - name: List repo files
+        - name: List Repo Files
           run: ls -ltra
+          
+        - name: Executing Shell Script
+          run: ./ascii-script.sh
+        
+        # - name: Install Cowsay Program
+        #   run: sudo apt-get install cowsay -y
+        
+        # - name: Execute Cowsay CMD
+        #   run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
+
+        # - name: Test file Exists
+        #   run: grep -i "dragon" dragon.txt
+
+        # - name: Read File
+        #   run: cat dragon.txt
+
+        # - name: List repo files
+        #   run: ls -ltra
