--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -4,31 +4,32 @@ on:
     push
 
 jobs:
-    ascii_job:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Checkout Repo
-          uses: actions/checkout@v4
-        
-        - name: List Repo Files
-          run: ls -ltra
+  build_job_1:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Install Cowsay program
+      run: sudo apt-get install cowsay -y
 
-        - name: Executing Shell Script
-          run: |
-            chmod +x ascii-script.sh
-            ./ascii-script.sh
-        
-        # - name: Install Cowsay Program
-        #   run: sudo apt-get install cowsay -y
-        
-        # - name: Execute Cowsay CMD
-        #   run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
+    - name: Execute cowsay CMD
+      run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
 
-        # - name: Test file Exists
-        #   run: grep -i "dragon" dragon.txt
+    - name: Sleep for 30 seconds
+      run: sleep 30
 
-        # - name: Read File
-        #   run: cat dragon.txt
+  test_job_2:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Sleep for 10 seconds
+      run: sleep 10
 
-        # - name: List repo files
-        #   run: ls -ltra
+    - name: Test File Exists
+      run: grep -i "dragon" dragon.txt
+
+  deploy_job_3:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Read File
+      run: cat dragon.txt
+      
+    - name: Deploy
+      run: echo Deploying.....
