--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -3,17 +3,12 @@ name: My First Workflow
 on: push
 
 jobs:
-    first_job:
-        runs-on: ubuntu-latest
-        steps:
-            - name: checkout repo
-              uses: actions/checkout@v4
-
-            - name: List and Read file
-              run: |
-                echo "My first Github actions Job"
-                ls -ltra
-                cat README.md
-            
-            - name: Generate ASCII Artwork
-              run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
+  first_job:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Welcome message
+      run: echo "My First Github action job"
+    - name: List files
+      run: ls
+    - name: Read file
+      run: cat README.md
