--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -8,9 +8,11 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v4
-    - name: Welcome message
-      run: echo "My First Github action job"
-    - name: List files
-      run: ls
-    - name: Read file
-      run: cat README.md
+    - name: List and read files.
+      run: |
+        echo "My First Github action job"
+        ls -ltra
+        cat README.md
+
+    - name: Generate ASCII artwork
+      run: cowsay -f dragon "Run for cover, I am a Dragon RAWR" >> dragon.txt
