--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -6,15 +6,13 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v4
-    - name: Install cowsay program
-      run: sudo apt-get install cowsay -y
-    - name: Execute cowsay cmd
-      run: cowsay -f dragon "Run for cover, I am a dragon RAWR" >> dragon.txt
-    - name: Test files exists
-      run: grep -i "dragon" dragon.txt
-    - name: Read file
-      run: cat dragon.txt
+
     - name: List repo files
       run: ls -ltra
+    
+    - name: Execute Shell Script
+      run: |
+        chmod +x ascii-script.sh
+        ./ascii-script.sh
     
   
