--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -8,15 +8,20 @@ jobs:
       run: sudo apt-get install cowsay -y
     - name: Execute cowsay cmd
       run: cowsay -f dragon "Run for cover, I am a dragon RAWR" >> dragon.txt
-    - name: Sleep for 30 seconds
-      run: sleep 30
+    - name: Upload Dragon text file
+      uses: actions/upload-artifact@v4
+      with:
+        name: dragon-text-file
+        path: dragon.txt
 
   test_job_2:
     needs: build_job_1
     runs-on: ubuntu-latest
     steps:
-    - name: Sleep for 10 seconds
-      run: sleep 10
+    - name: Download Dragon text file
+      uses: actions/download-artifact@v4
+      with:
+        name: dragon-text-file
     - name: Test file Exists
       run: grep -i "dragon" dragon.txt
     
@@ -25,6 +30,10 @@ jobs:
     needs: [test_job_2]
     runs-on: ubuntu-latest
     steps:
+    - name: Download Dragon text file
+      uses: actions/download-artifact@v4
+      with:
+        name: dragon-text-file
     - name: Read file
       run: cat dragon.txt
     - name: Deploy
