added deploy job

--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -14,3 +14,9 @@ jobs:
     - name: Docker Publish
       run: echo docker push $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
+  deploy:
+    needs: docker
+    runs-on: ubuntu-latest
+    steps:
+    - name: Docker run
+      run: echo docker run -d -p 8080:80 ${{ env.CONTAINER_REGISTRY }}/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
