--- a/.github/workflows/matrix-configuration.yml
+++ b/.github/workflows/matrix-configuration.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   deploy:
     strategy:
-      fail-fast: false
+      #fail-fast: false
       max-parallel: 2
       matrix:
         os: [ubuntu-latest, ubuntu-20.04, windows-latest]
