--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -1,5 +1,7 @@
 name: Exploring variables and secrets
-on: push
+on: 
+  workflow_dispatch:
+  push:
 env:
   CONTAINER_REGISTRY: docker.io
   IMAGE_NAME: github-actions-nginx
@@ -15,7 +17,11 @@ jobs:
       run: echo docker push $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
   deploy:
+    if: github.ref == 'refs/heads/main'
     needs: docker
+    concurrency:
+      group: production-deployment
+      cancel-in-progress: false
     runs-on: ubuntu-latest
     steps:
     - name: Docker run
